# n-workspace

./: Cargo.toml  cargo watch exaples.txt  rustc-ice-2025-07-04T20_09_58-9880.txt
libs/core/: Cargo.toml
libs/core/src/: accidental.rs  barline.rs  clef.rs  complex.rs  constants.rs  context.rs  direction.rs  duration.rs  head.rs  hpart.rs  key.rs  lib.rs  note.rs  part.rs  rest.rs  sysitem.rs  ties.rs  time.rs  voice.rs
libs/core_parse/: Cargo.toml
libs/core_parse/examples/: ex-parse1.rs
libs/core_parse/src/: lib.rs  parse.rs  resolve_ties.rs  utils.rs
libs/dev/: Cargo.toml
libs/dev/src/: lib.rs
libs/fonts/: Cargo.toml
libs/fonts/examples/: ex-fonts-export.rs  ex-fonts1.rs  ex-fonts2.rs  export.rs
libs/fonts/src/: fontcontext.rs  glyphs.rs  lib.rs  pathbuilder.rs  utils.rs
libs/graphics/src/: color.rs  fill.rs  graphicitem.rs  lib.rs  path.rs  rectangle.rs  stroke.rs
libs/grid/: Cargo.toml
libs/grid/examples/: ex-grid1.rs
libs/grid/src/: gridcontext.rs  griditem.rs  lib.rs
libs/gui/: Cargo.toml
libs/gui/src/: main.rs
libs/parse/: Cargo.toml
libs/parse/examples/: ex-parse-hvoice.rs  ex-parse1.rs
libs/parse/src/: lib.rs  parse.rs  parse2.rs  parse2utils.rs  resolve_ties.rs  utils.rs
libs/render/: Cargo.toml
libs/render/examples/: ex-render1.rs  ex-render2.rs
libs/render/src/: gridrender.rs  items.rs  lib.rs  music_glyphs.rs  output.rs
libs/score/: Cargo.toml
libs/score/examples/: ex-score1.rs  ex-score2.rs
libs/score/src/: build.rs  buildutils.rs  complex.rs  constants.rs  (+7 more)
libs/svg/: Cargo.toml
libs/utils/: Cargo.toml
(+26 files in other folders)
