[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "svg"] }
tokio = { version = "1.44.2" }

graphics = { path = "../graphics" }
grid = { path = "../grid" }
svg = { path = "../svg" }
core = { path = "../core" }
parse = { path = "../parse" }
score = { path = "../score" }
render = { path = "../render" }
